Add several addressing mode definitions

--- a/nes-emulator-solution/nes-emulator.vcxproj
+++ b/nes-emulator-solution/nes-emulator.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="CPU6502\CPU6502.cpp" />
     <ClCompile Include="nes_emulator.cpp" />
     <ClCompile Include="RAM\RAM.cpp" />
+    <ClCompile Include="Utils\address_utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bus\Bus.h" />
@@ -170,6 +171,7 @@
     <ClInclude Include="Bus\IODevice.h" />
     <ClInclude Include="CPU6502\CPU6502.h" />
     <ClInclude Include="RAM\RAM.h" />
+    <ClInclude Include="Utils\address_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
