Add full addressing mode definitions

--- a/nes-emulator-solution/nes-emulator.vcxproj
+++ b/nes-emulator-solution/nes-emulator.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="nes_emulator.cpp" />
     <ClCompile Include="RAM\RAM.cpp" />
     <ClCompile Include="Utils\address_utils.cpp" />
+    <ClCompile Include="Utils\bitwise_utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bus\Bus.h" />
@@ -172,6 +173,7 @@
     <ClInclude Include="CPU6502\CPU6502.h" />
     <ClInclude Include="RAM\RAM.h" />
     <ClInclude Include="Utils\address_utils.h" />
+    <ClInclude Include="Utils\bitwise_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
