--- a/nes-emulator-solution/nes-emulator.vcxproj
+++ b/nes-emulator-solution/nes-emulator.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Bus\IODevice.cpp" />
     <ClCompile Include="CPU6502\CPU6502.cpp" />
     <ClCompile Include="CPU6502\CPU6502Stack.cpp" />
+    <ClCompile Include="NES\NES.cpp" />
     <ClCompile Include="nes_emulator.cpp" />
     <ClCompile Include="RAM\RAM.cpp" />
     <ClCompile Include="Utils\address_utils.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="Bus\IODevice.h" />
     <ClInclude Include="CPU6502\CPU6502.h" />
     <ClInclude Include="CPU6502\CPU6502Stack.h" />
+    <ClInclude Include="NES\NES.h" />
     <ClInclude Include="RAM\RAM.h" />
     <ClInclude Include="Utils\address_utils.h" />
     <ClInclude Include="Utils\bitwise_utils.h" />
